# clang-tidy-plugin-csupport

./: CMakeLists.txt  LICENSE  README.md
test/ReturnValueNullCheck/: CMakeLists.txt  clang-tidy-check.sh  test.sh  unittest.sh
test/ReturnValueNullCheck/test_src/: calloc.c  fopen.c  main.c  malloc.c  other.c  realloc.c  test_calloc_ng_with_casting.sh  test_calloc_ng_without_casting.sh  test_calloc_ok_with_casting.sh  test_calloc_ok_without_casting.sh  test_fopen_ng_with_casting.sh  test_fopen_ng_without_casting.sh  test_fopen_ok_with_casting.sh  test_fopen_ok_without_casting.sh  test_malloc_ng_with_casting.sh  test_malloc_ng_without_casting.sh  test_malloc_ok_with_casting.sh  test_malloc_ok_without_casting.sh  test_other_ng.sh  test_other_ok.sh  test_realloc_ng_with_casting.sh  test_realloc_ng_without_casting.sh  test_realloc_ok_with_casting.sh  test_realloc_ok_without_casting.sh  test_stmt_in_cond_ng.sh  test_stmt_in_cond_ok.sh
test/ReturnValueNullCheck/test_src/test01_register_matcher/: test_calloc_DeclRefExpr_with_CStyleCastExpr.sh  test_calloc_DeclRefExpr_without_CStyleCastExpr.sh  test_calloc_VarDecl_with_CStyleCastExpr.sh  test_calloc_VarDecl_without_CStyleCastExpr.sh  test_fopen_DeclRefExpr_with_CStyleCastExpr.sh  test_fopen_DeclRefExpr_without_CStyleCastExpr.sh  test_fopen_VarDecl_with_CStyleCastExpr.sh  test_fopen_VarDecl_without_CStyleCastExpr.sh  test_malloc_DeclRefExpr_with_CStyleCastExpr.sh  test_malloc_DeclRefExpr_without_CStyleCastExpr.sh  test_malloc_VarDecl_with_CStyleCastExpr.sh  test_malloc_VarDecl_without_CStyleCastExpr.sh  (+4 more)
(+30 files in other folders)
